[package]
name = "fft_desk"
version = "0.1.0"
authors = ["Carson Page <carson.page@byterealm.com>"]
edition = "2018"

[dependencies]
rustfft = "3.0.0"
parking_lot = "0.7.1"
lazy_static = "1.3.0"
# cpal = { path = "cpal" }
cpal = { git = "https://github.com/RustAudio/cpal" }
hound = "3.4.0"
crossbeam = "0.7.1"
serialport = "3.2.0"
structopt = "0.2.15"

#[target.'cfg(windows)'.dependencies]
#winapi = { version = "0.3", features = ["winuser", "combaseapi", "objbase", "mmreg", "mmdeviceapi"] }

[profile.release]
debug = false
panic = "abort"
