[package]
name = "fft_desk"
version = "0.1.0"
authors = ["Carson Page <carson.page@byterealm.com>"]
edition = "2018"

[dependencies]
rustfft = "3.0.0"
parking_lot = "0.10.0"
# cpal = { path = "cpal" }
#cpal = { git = "https://github.com/RustAudio/cpal" }
cpal = "0.11.0"
hound = "3.4.0"
crossbeam = "0.7.3"
serialport = "3.2.0"
structopt = "0.2.15"
itertools = "0.9.0"


[profile.release]
debug = false
panic = "abort"
lto = "thin"